fix clinepi header: study menu awkward spacing
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ClinEpiWebsite/trunk@88411 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/packages/sites/clinepi-site/webapp/js/client/App/SiteMenu/SiteMenuItem.scss
+++ b/packages/sites/clinepi-site/webapp/js/client/App/SiteMenu/SiteMenuItem.scss
@@ -75,6 +75,7 @@ $white: #E0E0E0;
       border-bottom: 1px solid #fff;
       font-weight: 400;
       font-size: 0.8em;
+      background-color: #ededed;
       transition: all 0.5s;
 
       &>.SiteMenuItem-Link, &>.SiteMenuItem-Text {
@@ -100,6 +101,7 @@ $white: #E0E0E0;
         width: 100%;
         font-weight: 300;
         display: block;
+        margin-bottom: -5px;
         padding: 10px;
         background-color: lighten($white, 5%);
         color: #555;
